# dh-trace

./: .current_project  .gitignore  LICENSE  Project History.docx  README.md  author_prediction.py  authors.txt  auto_author_prediction.py  begin.sh  database_ops.py  diagrams.ipynb  do_math.sh  do_svm.py  do_svm_burrows_delta.py  do_viz.sh  generate_plots.py  hapaxes_1tM.py  init_db.py  load_alignments.py  load_authors_and_texts.py  load_hapax_intersects.py  load_hapaxes.py  load_jaccard.py  load_ngram_intersects.py  load_ngrams.py  load_relationships.py  logistic_regression.py  make_3d_plot.py  make_auto_scatterplot.py  make_confusion.py  make_dash.py  make_heatmap.py  make_histogram.py  make_jumbo_dash.py  make_lines.py  make_meta_lines.py  make_multiplot.py  predict_ops.py  pyproject.toml  requirements.txt  (+4 more)
arch/: do_math.sh  do_svm.py  make_lines.py  make_scatterplot.py
cleaning_splitting_scripts/gutenberg-text-splitter/: .gitignore  README.md  TODO.md  batch-splitter.py  pyproject.toml  requirements.txt  search.py  splitter  splitter.py
cleaning_splitting_scripts/gutenberg-text-splitter/input/: calebwilliams.html  canterburytales.html  chemphil.html  dracula.html  drmoreau.html  frankenstein.html  gatsby.html  greatexp.html  grimmsfairytales.html  holmes.html  jekyll.html  onruins.html  oz.html  pickwick.html  prideandprejudice.html  timemachine.html  ulysses.html
cleaning_splitting_scripts/gutenberg-text-splitter/meta/: quitting.txt  update_pg_catalog.sh
dh-trace-venv/: pyvenv.cfg
explore/: explore-db.py  explore-svm.py
notebooks/: diagrams.ipynb  visualising.ipynb
notebooks/.ipynb_checkpoints/: visualising-checkpoint.ipynb
utils/: get_choices.py
(+760 files in other folders)
