[tool.poetry]
name = "gutenberg-text-splitter"
version = "0.0.1"
description = ""
authors = ["jdmartin <jonsaccount+githubjd@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.1"
lxml = "^4.8.0"
rich = "^12.4.1"
pandas = "^1.4.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
